feat: user current month distance traveled endpoint
